pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifierDecl12.mof
/* Invalid qualifier scope. No keyword*/
Qualifier Abstract : boolean = false, 
    Scope(class association), 
    Flavor(EnableOverride, Restricted);
